<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_creator_session"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sessionStateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/status_bootstrap" />

    <TextView
        android:id="@+id/inviteCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status_bootstrap" />

    <ImageView
        android:id="@+id/inviteQrImage"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/desc_invite_qr" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refreshStatusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_refresh_session_status" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/completeCreationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/action_complete_wallet_creation" />
</LinearLayout>
